--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Django==3.2.8  # https://www.djangoproject.com/
 djangorestframework==3.12.4  # https://github.com/encode/django-rest-framework
 django-htmx==1.20.0  # https://github.com/adamchainz/django-htmx
 colorlog==6.9.0  # https://github.com/borntyping/python-colorlog
+whitenoise==6.7.0  # https://github.com/evansd/whitenoise
+gunicorn==23.0.0  # https://github.com/benoitc/gunicorn
